# julgi-game

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
julgi/: __init__.py  __main__.py  battle.py  classes.py  parse.py  util.py
julgi/skill/: ko.yml  skill_ko.yml  sort_skill.py
